# prompt-inspector

./: README.md  SKILL.md  pyproject.toml
prompt_inspector/: __init__.py
prompt_inspector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
